@@ -469,6 +469,8 @@ applications/jpip/libopenjpip/Makefile
 applications/jpip/opj_server/Makefile
 applications/jpip/opj_client/Makefile
 applications/jpip/opj_client/opj_dec_server/Makefile
+applications/jpip/tools/Makefile
+applications/jpip/tools/indexer/Makefile
 doc/Makefile
 ])
 
